<resources>
    <string name="app_name">CSI-DTU</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About the App</string>
    <string name="openDrawer">CSI</string>
    <string name="closeDrawer">CSI</string>
    <string name="heading">CSI-DTU</string>
    <string name="subheading">Delhi Technological University</string>
    <string name="news">News Feed</string>
    <string name="events">Events</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="contact">Contact Us</string>
    <string name="sponsors">Sponsors</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="about_dtu">A pioneer in technical education and research, Delhi Technological University (formerly Delhi College of Engineering) has marched from strength to strength throughout its illustrious history spanning 72 glorious years. The institution is spread across a sprawling 164 acre campus adjoining Rohini, Delhi, and boasts of world class infrastructure and state of the art technology. Home to over 8300 students, the college campus is truly a melting pot of cultures from across the length \'a-nil breadth of lndia and has also become a coveted destination for students from abroad. Encouraging thais growth, DTU is a hub of vibrant cultural activities and boasts of several cultural and literary societies. it has also forayed into Management education with the establishment of Delhi School of Management in 2009, thus spreading its ever-widening horizons in the field of knowledge and excellence.</string>
    <string name="about_csi">"Welcome to CSI

        What is one of the best times for figuring out who you are and what you really want out of life ? Right after you enter college."

        Lot of students make the mistake of living their college life in much the same way as they live their school life. But is college life the same as your school life ? The is a unanimous NO.

        And the difference lies in the vast array of cultural and technical societies which are accessible in college. And here we are, talking about one such society, CSI.</string>
    <string name="contact_header">Contact : </string>
    <string name="contact_1">Rahul Arora : +919654107522</string>
    <string name="contact_2">Vayu : +919818633396</string>
    <string name="rate_us">Rate the App</string>
    <string name="feedback">Additional Feedback</string>
    <string name="send_feedback">Send</string>
    <string name="developed_by">Developed By :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gallery__full__screen">Gallery_Full_Screen</string>
    <string name="Arpit_Gogia">ARPIT GOGIA</string>
    <string name="Parth_Gupta">PARTH GUPTA</string>
    <string name="sample_text">    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text"></string>
    <string name="link">https://www.facebook.com/PhoneixCSIDTU/</string>
    <string name="facebook_app_id">605382859616232</string>
</resources>
