<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/news"
            android:id="@+id/news"
            android:title="@string/news"/>
        <item
            android:icon="@drawable/events"
            android:id="@+id/events"
            android:title="@string/events"/>
        <item
            android:icon="@drawable/gallery"
            android:id="@+id/gallery"
            android:title="@string/gallery"/>
        <item
            android:icon="@drawable/about"
            android:id="@+id/about"
            android:title="@string/about"/>
        <item
            android:icon="@drawable/sponsors"
            android:id="@+id/sponsors"
            android:title="@string/sponsors"/>
        <item
            android:icon="@drawable/contact"
            android:id="@+id/contact"
            android:title="@string/contact"/>
    </group>
</menu>